Fixing header overflow issue.

--- a/starter-code/assets/styles/shared.css
+++ b/starter-code/assets/styles/shared.css
@@ -55,10 +55,10 @@ header{
 header::after{
     content: '';
     height: 72px;
-    width: calc(60% + 62px);
+    width: calc(50% + 62px);
     position: absolute;
     top: calc(50% - 36px);
-    left: 50%;
+    left: calc(50% - 62px);
     background-color: #FFFFFF11;
     backdrop-filter: blur(15px);
     z-index: -1;
